--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-comment-tip",
-  "displayName": "vscode-comment-tip",
-  "description": "能够对折叠的评论信息展示第一行文本信息",
+  "displayName": "comment tip",
+  "description": "能够对折叠的注释信息展示第一行的描述信息",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.80.0"
