feat: 添加启动就激活状态

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "onLanguage:react",
     "onLanguage:angular",
     "onLanguage:selvet",
-    "onLanguage:html"
+    "onLanguage:html",
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
